# normalization

./: README.md  normalization.cabal
app/: Main.hs
src/: Examples.hs  FreeVars.hs  Normalize.hs  Pretty.hs  Substitution.hs  Syntax.hs  Typecheck.hs
src/Reduction/: Beta.hs  Common.hs  Detour.hs  Permutation.hs
